2009-09-10  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/sol2-c.c (cmn_err_length_specs): Initialize
	scalar_identity_flag.

2009-09-10  Richard Henderson  <rth@redhat.com>

	* tree.h (struct tree_decl_common): Move align member earlier;
	move label_decl_uid member ...
	(struct tree_label_decl): ... here.
	(LABEL_DECL_UID): Update to match.

	* tree-cfg.c (dump_function_to_file): Dump eh tree with TDF_EH,
	not TDF_DETAILS.

	* tree-cfg.c (gimple_redirect_edge_and_branch): Do
	gimple_try_redirect_by_replacing_jump test after no-op and EH tests.

	* tree-cfg.c (split_edge_bb_loc): Don't disallow placement at
	dest_prev if the edge is complex.

	* tree-cfg.c (is_ctrl_stmt): Use a switch.

	* tree-cfg.c (gimple_can_merge_blocks_p): Move label and
	loop latch tests earlier.

	* gimple-iterator.c (gimple_find_edge_insert_loc): Insert
	before GIMPLE_RETURN, not after its predecessor; insert
	before GIMPLE_RESX.

	* gimple-iterator.c (gimple_find_edge_insert_loc): Use
	gimple_seq_empty_p to test for no PHI nodes.
	* tree-cfg.c (split_critical_edges): Likewise.

	* c-common.h (c_dialect_cxx, c_dialect_objc): Boolify.

2009-09-10  Hariharan Sandanagobalane  <hariharan@picochip.com>

	* final.c (shorten_branches) : Ignore DEBUG_INSN_P instructions
        introduced by the VTA branch merge.

2009-09-10  Uros Bizjak  <ubizjak@gmail.com>

	* ira-conflicts.c: Use fputs or putc instead of fprintf
	where appropriate.
	* cfg.c: Ditto.
	* toplev.c: Ditto.
	* tree-switch-conversion.c: Ditto.

2009-09-10  Hariharan Sandanagobalane  <hariharan@picochip.com>

	* config/picochip/picochip.c : Ignore DEBUG_INSN_P instructions
        introduced by the VTA branch merge.

2009-09-10  Uros Bizjak  <ubizjak@gmail.com>

	Revert:
	2009-09-09  Uros Bizjak  <ubizjak@gmail.com>

	PR rtl-optimization/39779
	* expr.c (convert_modes): Return when mode == oldmode after
	CONST_INTs are processed.

2009-09-10  Nick Clifton  <nickc@redhat.com>
